# ui-object-detection-coco

./: .gitignore  README.md  plot_results.py  pyproject.toml  requirements.txt  test_baseline_coco.json  test_current_pred.json
data/raw/: instances_bounding boxes.json
docs/: cvat_notes.md
hf/: push_dataset.py
inference/: compare.py  image_diff.py  postprocess.py  predict.py  report.py  ui_analysis.py  visualize.py
scripts/: prepare_dataset.py
src/ui_detect/utils/: coco.py
training/: train_fasterrcnn.py  train_yolo.py
